modified endpoints from /files/ to /v1/files/
