# src/files_api/routes.py
@@ -30,7 +30,7 @@ from files_api.settings import Settings
 ROUTER = APIRouter()
 
 
-@ROUTER.put("/files/{file_path:path}")
+@ROUTER.put("/v1/files/{file_path:path}")
 async def upload_file(
     request: Request,
     file_path: str,
@@ -95,7 +95,7 @@ async def list_files(
     )
 
 
-@ROUTER.head("/files/{file_path:path}")
+@ROUTER.head("/v1/files/{file_path:path}")
 async def get_file_metadata(
     request: Request,
     file_path: str,
@@ -125,7 +125,7 @@ async def get_file_metadata(
     return response
 
 
-@ROUTER.get("/files/{file_path:path}")
+@ROUTER.get("/v1/files/{file_path:path}")
 async def get_file(
     request: Request,
     response: Response,
@@ -149,7 +149,7 @@ async def get_file(
     )
 
 
-@ROUTER.delete("/files/{file_path:path}")
+@ROUTER.delete("/v1/files/{file_path:path}")
 async def delete_file(
     request: Request,
     file_path: str,
